--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1"
+    "jest-environment-jsdom": "^29.3.1",
+    "semantic-release": "^19.0.5"
   }
 }
